@@ -1,3 +1,13 @@
+2015-03-17  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Remove never used "useLayerOnTop" bindings generator argument
+        https://bugs.webkit.org/show_bug.cgi?id=142773
+
+        Reviewed by Darin Adler.
+
+        * WebKitTestRunner/InjectedBundle/Bindings/CodeGeneratorTestRunner.pm:
+        (new):
+
 2015-03-16  Ryosuke Niwa  <rniwa@webkit.org>
 
         Enable ES6 classes by default
